# bin_picking_pilar_pablo

./: CMakeLists.txt  README.md  package.xml
Sensors/: Sensors.ino
ai_manager/: CMakeLists.txt  README.md  package.xml  setup.py
ai_manager/msg/: ListOfPredictions.msg  Prediction.msg
ai_manager/srv/: GetActions.srv  GetBestPrediction.srv
arduino/vg_controler/: vg_controler.ino
conda_environments/: python2.yml  python3.yml
robot_controller/: CMakeLists.txt  package.xml
robot_controller/src/: MoveRobotToPredict.py  Robot.py  arduino.py  get_current_position.py  main.py  move_cartesian.py  old_environments.py  random_picks_birdview.py  random_picks_for_training.py  (+12 more)
robot_controller/src/ur_icam_description/ur_icam/: CMakeLists.txt  package.xml  setup.py
robot_controller/src/ur_icam_description/ur_icam/launch/: moveit_rviz.launch  ur5_upload.launch  ur_camera_vacuum_gripper.launch  ur_camera_vacuum_gripper_objets.launch  ur_gripper_cube.launch  webcam.launch  webcam_gazebo.launch
robot_controller/src/ur_icam_description/ur_icam/scripts/: node_camera.py  node_create_objects.py  node_get_image.py  node_move_cartesian.py  node_move_robot_with_topic.py  node_push_cubes.py  node_pyqt_interact_robot.py  node_robotiq85_gripper.py  node_stack_cubes.py  node_test_collision_moveit.py  node_test_on_real_robot.py  rg2_server_node.py
robot_controller/src/ur_icam_description/ur_icam/urdf/: common.gazebo.xacro  ur5.urdf.xacro  ur5_joint_limited_robot.urdf.xacro  ur5_robot.urdf.xacro  ur5_robotiq85_gripper.urdf.xacro
scripts/: testServer.py
vacuum/: vacuum.ino
(+82 files in other folders)
